[metadata]
name = MessPy3
version = 0.0.1
author = Till Stensitzki
author_email = mail.till@gmx.de
description = Data aquestion for ultrafast spectroscopy using enaml
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = MessPy3
packages = find:
python_requires = >=3.6

[options.packages.find]
where = MessPy3